--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         </div>
         <div class="skill-row">
           <img class="skill-img" src="images/pcbb.gif" id="pcb" alt="pcb-gif" />
-          <h3>PCB Design</h3>
+          <h3>PCB and Circuit Design</h3>
           <p class="skill-description">
             Over the course of my bachelor's degree in Electrical Engineering, I
             was introduced to and well trained in the designing of Printed
@@ -95,6 +95,18 @@
             of miscallaneous knowledge. I would do well at Trivia ;)
           </p>
         </div>
+      <div class="skill-row">
+         <img class="skill-img" src="images/plc.png" id="PLC" alt="PLC-img" />
+         <h3>PLC</h3>
+         <p class="skill-description">
+            During my specialisation in Automation in my final year of my Electrical
+            Engineering BSc. I was introduced to the Programmable Logic Controllers
+            and their uses in Automation, as well as their functioning, programming,
+            and the designing of systems they are used in. My training in them
+            was in depth, involving their different circuits, power ratings,
+            module types and network systems and standards.
+            
+         </p>
       </div>
       <hr />
       <div class="contact-me">
