--- a/index.html
+++ b/index.html
@@ -104,7 +104,8 @@
             and their uses in Automation, as well as their functioning, programming,
             and the designing of systems they are used in. My training in them
             was in depth, involving their different circuits, power ratings,
-            module types and network systems and standards.
+            module types, programming (usually in C/C++ but sometimes in higher
+            level languages) and network systems and standards.
             
          </p>
       </div>
