--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
         <img class="profile-img" src="images/me.png" alt="Jeremiah-pic" />
         <h2>Marhaba!</h2>
         <p class="description">
-          My name is Jeremiah Udo and I am a soon to be graduated Electrical
-          Engineering bachelor's student of the University of Debrecen. I ❤️
+          My name is Jeremiah Udo and I am an Electrical Engineer BSc. I ❤️
           playing basketball.
         </p>
       </div>
