--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
     </div>
     <div class="middle-container">
       <div class="profile">
-        <img class="profile-img" src="images/me.png" alt="Jeremiah-pic" />
+        <img class="profile-img" src="images/PIC-modified.png" alt="Jeremiah-pic" />
         <h2>Marhaba!</h2>
         <p class="description">
-          My name is Jeremiah Udo and I am an Electrical Engineer BSc. I ❤️
-          playing basketball.
+          My name is Jeremiah Udo and I am an Electrical Engineer BSc. 
+          I ❤️ playing basketball.
         </p>
       </div>
       <hr />
