--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             src="https://cdn-icons-png.flaticon.com/512/1005/1005142.png"
             alt="computer-pic"
           />
-          <h3>Coding</h3>
+          <h3>Programming</h3>
           <p class="skill-description even-text">
             I was introduced to coding in my first semester University with the
             C/C++ languages, and then further in my Object-Oriented Programming
@@ -66,14 +66,20 @@
         </div>
         <div class="skill-row">
           <img class="skill-img" src="images/pcbb.gif" id="pcb" alt="pcb-gif" />
-          <h3>PCB and Circuit Design</h3>
+          <h3>PCB, Circuit Design, and Embedded Systems</h3>
           <p class="skill-description">
             Over the course of my bachelor's degree in Electrical Engineering, I
             was introduced to and well trained in the designing of Printed
             Circuit Boards. My training was intensive, involving everything from
             the simulation of circuits on software such as TINA-TI, to the
             physical simulation of circuits using breadboards and finally the
-            modelling of circuit boards on software like EAGLE.
+            modelling of circuit boards on software like EAGLE. I also undertook
+            an Rmbedded Systems Engineer position at the Faculty of Physics at 
+            the University of Debrecen during which I was required to program a 
+            microcontroller (ESP32) using Embedded C (and some libraries) to 
+            interface with certain sensors to form a sensing system. I networked
+            the system to stream its data to a cloud platform to allow for 
+            real-time remote sensing.
           </p>
         </div>
         <div class="skill-row">
