--- a/index.html
+++ b/index.html
@@ -69,17 +69,13 @@
           <h3>PCB, Circuit Design, and Embedded Systems</h3>
           <p class="skill-description">
             Over the course of my bachelor's degree in Electrical Engineering, I
-            was introduced to and well trained in the designing of Printed
-            Circuit Boards. My training was intensive, involving everything from
-            the simulation of circuits on software such as TINA-TI, to the
-            physical simulation of circuits using breadboards and finally the
-            modelling of circuit boards on software like EAGLE. I also undertook
-            an Rmbedded Systems Engineer position at the Faculty of Physics at 
-            the University of Debrecen during which I was required to program a 
-            microcontroller (ESP32) using Embedded C (and some libraries) to 
-            interface with certain sensors to form a sensing system. I networked
-            the system to stream its data to a cloud platform to allow for 
-            real-time remote sensing.
+            was introduced to and well trained in the designing of Printed Circuit
+            Boards. My training was intensive, involving the simulation of circuits
+            on software such as TINA-TI and the modelling of circuit boards using 
+            software like EAGLE. I undertook an Embedded Systems Engineer position  
+            at the Physics Institues during which I programmed an ESP32 microcontroller
+            in Embedded C to interface with sensors. I networked the system to 
+            stream its data to a cloud platform to allow for real-time remote sensing.
           </p>
         </div>
         <div class="skill-row">
