--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <img class="profile-img" src="images/PIC-modified.png" alt="Jeremiah-pic" />
         <h2>Marhaba!</h2>
         <p class="description">
-          My name is Jeremiah Udo and I am an Electrical Engineer BSc. 
+          My name is Jeremiah Udo and I am an Electrical Engineer BSc specialied in Automation and Control. 
           I ❤️ playing basketball.
         </p>
       </div>
@@ -58,10 +58,10 @@
             I was introduced to coding in my first semester University with the
             C/C++ languages, and then further in my Object-Oriented Programming
             course. I then went on to deepen my knowledge in C++ with
-            TheCherno's C++ online courses, and then ran Harvard's Computer
-            Science CS50x course in which I further familiarized myself with
-            Python, SQL(Sqlite3), the Flask Framework, and Jinja templating, and
-            have been working on completing projects since.
+            TheCherno's C++ online courses, learned javascript, and then ran 
+            Harvard's Computer Science CS50x course in which I further 
+            familiarized myself with Python, SQL(Sqlite3), the Flask Framework, 
+            and Jinja templating, and have been working on completing projects since.
           </p>
         </div>
         <div class="skill-row">
