--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <img class="profile-img" src="images/PIC-modified.png" alt="Jeremiah-pic" />
         <h2>Marhaba!</h2>
         <p class="description">
-          My name is Jeremiah Udo and I am an Electrical Engineer BSc specialied in Automation and Control. 
+          My name is Jeremiah Udo and I am an Electrical Engineer BSc specialized in Automation and Control. 
           I ❤️ playing basketball.
         </p>
       </div>
